Fix styles on mobile order summary

--- a/src/components/summit-my-orders-tickets/components/OrderSummary/order-summary.scss
+++ b/src/components/summit-my-orders-tickets/components/OrderSummary/order-summary.scss
@@ -6,12 +6,12 @@
   color: $color-white;
 
   &.open {
-    z-index: 1000;
+    z-index: 10000;
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow-y: scroll;
   }
 
